apps/base/vaultwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/instance: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: docker.io/vaultwarden/server:1.33.2
          ports:
            - containerPort: 80
              name: http-vaultwarden
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-data-pvc
