apps/base/vaultwarden/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - name: http-vaultwarden
      protocol: TCP
      port: 80
      targetPort: http-vaultwarden
